Fix sonarlint issues